[gd_scene load_steps=18 format=3 uid="uid://bennaqmmpj21s"]

[ext_resource type="Script" uid="uid://cjvlqkl4n45p2" path="res://Scripts/Enemies/cloaked_warrior.gd" id="1_3gn8u"]
[ext_resource type="Texture2D" uid="uid://dar007ouy7vil" path="res://Assets/Enemies/CloakedWarrior/Bringer-of-Death-SpritSheet.png" id="2_x63qn"]
[ext_resource type="Script" uid="uid://dw27quar45c1f" path="res://Scripts/Components/HealthComponent.gd" id="3_3iopg"]
[ext_resource type="Script" uid="uid://dlkg6c6p32cxl" path="res://Scripts/Components/HitboxComponent.gd" id="3_mlicm"]
[ext_resource type="AudioStream" uid="uid://ckxludl44rjed" path="res://Assets/Audio/CloakedGrunt.mp3" id="5_7rn6a"]
[ext_resource type="AudioStream" uid="uid://i08vj4aoxwd6" path="res://Assets/Audio/CloakedSwing.mp3" id="6_1ju18"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_km7i8"]
size = Vector2(50, 57)

[sub_resource type="Animation" id="Animation_8oxsa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/HitboxComponent/MeleeHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:animating")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_005ih"]
resource_name = "cw_attack"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.25, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 18, 19, 20, 21, 22, 23, 24, 25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.63),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/HitboxComponent/MeleeHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.35, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:animating")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"PlaySlashSound"
}]
}

[sub_resource type="Animation" id="Animation_1wen4"]
resource_name = "cw_death"
length = 0.73
step = 0.065
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_m5l8p"]
resource_name = "cw_hurt"
length = 0.35
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animating")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.34),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:attacking")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2ovb0"]
resource_name = "cw_idle"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_npveu"]
resource_name = "cw_ranged"
length = 0.85
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [39, 40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_t7oqc"]
resource_name = "cw_walk"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlvsg"]
_data = {
&"RESET": SubResource("Animation_8oxsa"),
&"cw_attack": SubResource("Animation_005ih"),
&"cw_death": SubResource("Animation_1wen4"),
&"cw_hurt": SubResource("Animation_m5l8p"),
&"cw_idle": SubResource("Animation_2ovb0"),
&"cw_ranged": SubResource("Animation_npveu"),
&"cw_walk": SubResource("Animation_t7oqc")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o76go"]
radius = 20.0
height = 57.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmjxs"]
size = Vector2(39, 55)

[node name="CloakedWarrior" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 5
script = ExtResource("1_3gn8u")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
position = Vector2(35, -45.5)
texture = ExtResource("2_x63qn")
flip_h = true
hframes = 8
vframes = 8
region_rect = Rect2(-43, 0, 1294, 744)

[node name="DetectPlayer" type="RayCast2D" parent="Marker2D" groups=["Components"]]
position = Vector2(0, -30)
target_position = Vector2(50, 0)
collision_mask = 4

[node name="HitboxComponent" type="Area2D" parent="Marker2D" node_paths=PackedStringArray("health_component") groups=["Components"]]
collision_layer = 16
collision_mask = 0
script = ExtResource("3_mlicm")
health_component = NodePath("../../HealthComponent")

[node name="MeleeHitbox" type="CollisionShape2D" parent="Marker2D/HitboxComponent" groups=["Components"]]
position = Vector2(56, -28.5)
shape = SubResource("RectangleShape2D_km7i8")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qlvsg")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Components"]]
position = Vector2(0, -28.5)
shape = SubResource("CapsuleShape2D_o76go")

[node name="RayCastRight" type="RayCast2D" parent="." groups=["Components"]]
position = Vector2(0, -10)
target_position = Vector2(22, 0)

[node name="RayCastLeft" type="RayCast2D" parent="." groups=["Components"]]
position = Vector2(0, -10)
target_position = Vector2(-22, 0)

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_3iopg")
MAX_HEALTH = 4

[node name="Hurtbox" type="Area2D" parent="." groups=["Components"]]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" groups=["Components"]]
position = Vector2(-2.5, -27.5)
shape = SubResource("RectangleShape2D_wmjxs")

[node name="AudioGrunt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7rn6a")
volume_db = -10.0

[node name="AudioSlash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1ju18")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -50)
scale = Vector2(10, 5)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
